--- a/miguel1-travel/res/values/strings.xml
+++ b/miguel1-travel/res/values/strings.xml
@@ -27,13 +27,13 @@
     <string name="amount">Amount</string>
     <string name="currency_type">Currency Type</string>
     <string name="view_expenses">VIEW EXPENSES</string>
-    <string name="edit_claim">EDIT CLAIM</string>
+    <string name="edit_claim">Edit Claim</string>
     <string name="select_claim_">"Select Claim "</string>
     <string name="edit_destination">Edit Destination</string>
     <string name="edit_from">Edit From</string>
     <string name="edit_to">Edit To</string>
     <string name="edit_reason">Edit Reason</string>
-    <string name="mail_claim">MAIL CLAIM</string>
+    <string name="mail_claim">Mail Claim</string>
     <string name="select_claim">Select Claim</string>
     <string name="email_to">Email To</string>
     <string name="example_gmail_com">example@gmail.com</string>
@@ -44,12 +44,25 @@
     <string name="returned">Returned</string>
     <string name="approved">Approved</string>
     <string name="save">SAVE</string>
-    <string name="delete_claim">DELETE CLAIM</string>
+    <string name="delete_claim">Delete Claim</string>
     <string name="expenses">Expenses</string>
     <string name="total">Total</string>
     <string name="select_expense">Select Expense</string>
-    <string name="delete_expense">DELETE EXPENSE</string>
-    <string name="edit_expense">EDIT EXPENSE</string>
+    <string name="delete_expense">Delete expense</string>
+    <string name="edit_expense">Edit Expense</string>
     <string name="view_claims">View Claims</string>
+    <string name="view_expense">View Expense</string>
+    <string name="check_claim_status">Check Claim Status</string>
+    <string name="add_claim">Add Claim</string>
+    <string name="add_expense">Add Expense</string>
+    <string name="title_activity_list_exp">ListExp</string>
+    <string name="title_activity_edit_claimactivity">EditClaimactivity</string>
+    <string name="title_activity_add_claim">AddClaimActivity</string>
+    <string name="title_activity_delete_claim">DeleteClaimActivity</string>
+    <string name="title_activity_mail_claim">MailClaimActivity</string>
+    <string name="title_activity_status_claim">StatusClaimActivity</string>
+    <string name="title_activity_add_exp">AddExpActivity</string>
+    <string name="title_activity_edit_exp">EditExpActivity</string>
+    <string name="title_activity_delete_exp">DeleteExpActivity</string>
 
 </resources>
