connecting buttons to functions

--- a/miguel1-travel/res/values/strings.xml
+++ b/miguel1-travel/res/values/strings.xml
@@ -64,5 +64,6 @@
     <string name="title_activity_add_exp">AddExpActivity</string>
     <string name="title_activity_edit_exp">EditExpActivity</string>
     <string name="title_activity_delete_exp">DeleteExpActivity</string>
+    <string name="claim_name">Claim Name</string>
 
 </resources>
